[package]
name = "first_rpg_game"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Fidder <gabfid@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
first_rpg_lib = { path = "../first_rpg_lib", version = "0.1.0" }
